[package]
authors = ["Maciej Augustyniak <augustyniak.maciej@protonmail.com>"]
edition = "2018"
readme = "README.md"
name = "mill"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
embedded-hal = "0.2.4"
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
rtcc = "0.2.1"

[dependencies.arrayvec]
version = "0.5.1"
default-features = false

[dependencies.hd44780-driver]
git = "https://github.com/JohnDoneth/hd44780-driver"

[dependencies.stm32f4xx-hal] 
version = "0.9.0"
features = ["rt", "stm32f401"]

[[bin]]
name = "mill"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
